add test page clean code

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -16,6 +16,6 @@ Welcome to your new app.
 
     private void IncrementCount()
     {
-        Http.GetAsync("WeatherForecast/test");
+        Http.GetAsync("IronMan/test");
     }
 }
