--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -3,7 +3,7 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world111!</h1>
+<h1>Hello, world test!</h1>
 
 Welcome to your new app.
 
@@ -12,7 +12,7 @@ Welcome to your new app.
 <button class="btn btn-primary" @onclick="IncrementCount">Test</button>
 
 @code {
-    
+
 
     private void IncrementCount()
     {
