--- a/Client/Pages/Test.razor
+++ b/Client/Pages/Test.razor
@@ -9,7 +9,9 @@
 <p>Motore 1: <input @bind="servoInfo.Angle1"/> </p>
 <p>Motore 2: <input @bind="servoInfo.Angle2"/> </p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="IncrementCount">Click me</button><br />
+<button class="btn btn-primary" @onclick="LedOn">Led on</button><button class="btn btn-primary" @onclick="LedOff">Led off</button><br />
+
 
 @code {
     private ServoInfo servoInfo = new ServoInfo() { Angle1=10,Angle2=20};
@@ -18,7 +20,24 @@
     {
         using var response = await Http.PostAsJsonAsync("IronMan/MoveServo",servoInfo);
 
-        // convert response data to Article object
+       
+    //article = await response.Content.ReadFromJsonAsync<Article>();
+
+    }
+
+    private async void LedOn()
+    {
+       
+         Http.GetAsync("IronMan/LedOn");
+       
+    //article = await response.Content.ReadFromJsonAsync<Article>();
+
+    }
+
+    private async void LedOff()
+    {  
+         Http.GetAsync("IronMan/LedOff");
+       
     //article = await response.Content.ReadFromJsonAsync<Article>();
 
     }
