fix fix fix fix

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -3,7 +3,7 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world Ironman v 0.1</h1>
+<h1>Hello, i'm Jarvis v 0.2 beta</h1>
 
 Welcome to your new app.
 
