--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="test">
-                <span class="oi oi-plus" aria-hidden="true"></span> Test
+                <span class="oi oi-plus" aria-hidden="true"></span> Config
             </NavLink>
         </div>
 
