--- a/Client/Pages/Test.razor
+++ b/Client/Pages/Test.razor
@@ -2,9 +2,9 @@
 @inject HttpClient Http
 @using BlazorIron.Shared
 
-<PageTitle>Test</PageTitle>
+<PageTitle>Config</PageTitle>
 
-<h1>Counter</h1>
+<h1>Config</h1>
 
 <p>Motore 1: <input @bind="servoInfo.Angle1" /> </p>
 <p>Motore 2: <input @bind="servoInfo.Angle2" /> </p>
